--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
               <h3>&#123; &#123; Thinking.Outside.The.Block &#125; &#125;</h3>
               <p class="meta"> - or - </p>
               <h4>What Tupac &amp; Biggie can teach us about choosing to go decoupled.</h4>
-              <p class="meta"> Baltimore Drupal Camp, 2015</p>
+              <p class="meta"> Baltimore Drupal Camp, 2015 | <a href="https://github.com/drogers98/detached-drupalcamp-baltimore">github.com/drogers98/detached-drupalcamp-baltimore</a></p>
             </div>
           </section>
 
